--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# expo
+.expo/
+
+# idea
+.idea/
+
 # dependencies
 /node_modules
 
@@ -20,5 +26,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# intellij
-.idea/
+#LEO: for android
+android/.idea
+android/build/
+android/app/build/
+android/.gradle
+android/local.properties
+android/app/src/main/assets/
+
+#LEO: for ios
+ios/Pods/
+ios/Output/
+ios/build/
+ios/tsreactnativeplayground.xcworkspace/xcuserdata/
