--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-native": "0.50.3",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.12.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "react-start": "react-scripts-ts start",
+    "react-build": "react-scripts-ts build",
+    "react-test": "react-scripts-ts test --env=jsdom",
+    "react-eject": "react-scripts-ts eject",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "clean": "npm run clean-android && npm run clean-ios",
+    "clean-android": "cd android && rm -rf build && rm -rf app/build && ./gradlew clean",
+    "clean-ios": "cd ios && rm -rf build"
   },
   "devDependencies": {
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "jest-expo": "23.0.0",
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^22.0.1",
@@ -24,5 +34,8 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "react-test-renderer": "^16.2.0"
+  },
+  "jest": {
+    "preset": "jest-expo"
   }
 }
