--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "clean-ios": "cd ios && rm -rf build"
   },
   "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-expo": "23.0.0",
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^22.0.1",
@@ -31,9 +29,13 @@
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "@types/react-test-renderer": "^16.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "react-test-renderer": "^16.2.0"
+    "jest-expo": "23.0.0",
+    "react-native-typescript-transformer": "^1.2.3",
+    "react-test-renderer": "^16.2.0",
+    "typescript": "^2.6.2"
   },
   "jest": {
     "preset": "jest-expo"
