--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "react": "^16.2.0",
-    "react-native": "0.50.3",
     "react-dom": "^16.2.0",
+    "react-native": "0.50.3",
     "react-scripts-ts": "2.12.0"
   },
   "scripts": {
