--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "lib": [ "dom", "es2015"],
     "module": "es2015",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules"
